refactor(ApiCache): improve logging messages and simplify cache handling